fixed spacing in comments form

--- a/src/containers/Bounty/components/NewCommentForm.module.scss
+++ b/src/containers/Bounty/components/NewCommentForm.module.scss
@@ -1,5 +1,11 @@
 @import "~styles/variables.scss";
 
 .container {
+  display: flex;
+  flex-direction: row;
   padding: $base-spacing 0;
+}
+
+.textbox {
+  flex-grow: 1;
 }
